--- a/about.html
+++ b/about.html
@@ -1,3 +1,107 @@
-<script>
-document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%0A%3C%68%65%61%64%3E%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%70%72%6F%70%65%72%74%79%3D%22%6F%67%3A%69%6D%61%67%65%22%20%63%6F%6E%74%65%6E%74%3D%22%68%74%74%70%73%3A%2F%2F%61%2E%74%6F%70%34%74%6F%70%2E%69%6F%2F%70%5F%33%30%39%37%6C%67%74%62%77%30%2E%6A%70%67%22%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%68%6F%72%74%63%75%74%20%69%63%6F%6E%22%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%61%2E%74%6F%70%34%74%6F%70%2E%69%6F%2F%70%5F%33%30%39%37%6C%67%74%62%77%30%2E%6A%70%67%22%20%74%79%70%65%3D%22%69%6D%61%67%65%2F%78%2D%69%63%6F%6E%22%20%2F%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%41%72%6F%6F%2D%41%62%6F%75%74%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%73%74%79%6C%65%3E%0A%20%20%20%20%20%20%20%20%62%6F%64%79%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%6F%6E%74%2D%66%61%6D%69%6C%79%3A%20%27%53%65%67%6F%65%20%55%49%27%2C%20%54%61%68%6F%6D%61%2C%20%47%65%6E%65%76%61%2C%20%56%65%72%64%61%6E%61%2C%20%73%61%6E%73%2D%73%65%72%69%66%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6C%69%6E%65%2D%68%65%69%67%68%74%3A%20%31%2E%36%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%66%39%66%37%66%34%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6D%61%72%67%69%6E%3A%20%30%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%30%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%68%65%61%64%65%72%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%35%30%33%39%34%63%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%23%66%66%66%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%32%30%70%78%20%30%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%64%69%73%70%6C%61%79%3A%20%66%6C%65%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%61%6C%69%67%6E%2D%69%74%65%6D%73%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6A%75%73%74%69%66%79%2D%63%6F%6E%74%65%6E%74%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%61%20%7B%0A%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%64%65%63%6F%72%61%74%69%6F%6E%3A%20%6E%6F%6E%65%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%2E%41%72%6F%6F%20%7B%0A%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%23%66%66%66%3B%0A%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%64%65%63%6F%72%61%74%69%6F%6E%3A%20%6E%6F%6E%65%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%2E%70%72%6F%66%69%6C%65%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%64%69%73%70%6C%61%79%3A%20%66%6C%65%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%61%6C%69%67%6E%2D%69%74%65%6D%73%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%67%61%70%3A%20%31%30%70%78%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%2E%70%72%6F%66%69%6C%65%20%69%6D%67%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%77%69%64%74%68%3A%20%35%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%68%65%69%67%68%74%3A%20%35%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%35%30%25%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%6E%61%76%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%37%33%35%66%36%64%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%31%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%6E%61%76%20%61%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%23%66%66%66%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%64%65%63%6F%72%61%74%69%6F%6E%3A%20%6E%6F%6E%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6D%61%72%67%69%6E%3A%20%30%20%31%30%70%78%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%6E%61%76%20%61%3A%68%6F%76%65%72%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%64%65%63%6F%72%61%74%69%6F%6E%3A%20%75%6E%64%65%72%6C%69%6E%65%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%2E%63%6F%6E%74%61%69%6E%65%72%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%77%69%64%74%68%3A%20%38%30%25%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6D%61%72%67%69%6E%3A%20%32%30%70%78%20%61%75%74%6F%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%66%66%66%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%32%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%38%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%78%2D%73%68%61%64%6F%77%3A%20%30%20%30%20%31%30%70%78%20%72%67%62%61%28%30%2C%30%2C%30%2C%30%2E%31%29%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%2E%61%62%6F%75%74%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6D%61%72%67%69%6E%2D%62%6F%74%74%6F%6D%3A%20%32%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%2D%62%6F%74%74%6F%6D%3A%20%32%30%70%78%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%2E%61%62%6F%75%74%20%68%33%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%23%35%30%33%39%34%63%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%2E%61%62%6F%75%74%20%70%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%23%36%36%36%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%66%6F%6F%74%65%72%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%31%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%35%30%33%39%34%63%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%23%39%39%39%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%6F%73%69%74%69%6F%6E%3A%20%66%69%78%65%64%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%74%74%6F%6D%3A%20%30%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%77%69%64%74%68%3A%20%31%30%30%25%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%3C%2F%73%74%79%6C%65%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%20%20%20%20%3C%68%65%61%64%65%72%3E%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%70%72%6F%66%69%6C%65%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%69%6D%67%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%61%2E%74%6F%70%34%74%6F%70%2E%69%6F%2F%70%5F%33%30%39%37%6C%67%74%62%77%30%2E%6A%70%67%22%20%61%6C%74%3D%22%46%6F%74%6F%20%50%72%6F%66%69%6C%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%61%20%63%6C%61%73%73%3D%22%41%72%6F%6F%22%20%68%72%65%66%3D%22%61%62%6F%75%74%2E%68%74%6D%6C%22%3E%3C%68%31%3E%41%72%6F%6F%2D%41%62%6F%75%74%3C%2F%68%31%3E%3C%2F%61%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%3C%2F%68%65%61%64%65%72%3E%0A%20%20%20%20%3C%6E%61%76%3E%0A%20%20%20%20%20%20%20%20%3C%61%20%68%72%65%66%3D%22%69%6E%64%65%78%2E%68%74%6D%6C%22%3E%48%6F%6D%65%3C%2F%61%3E%0A%20%20%20%20%20%20%20%20%3C%61%20%68%72%65%66%3D%22%61%62%6F%75%74%2E%68%74%6D%6C%22%3E%41%62%6F%75%74%3C%2F%61%3E%0A%20%20%20%20%20%20%20%20%3C%61%20%68%72%65%66%3D%22%63%6F%6E%74%61%63%74%2E%68%74%6D%6C%22%3E%43%6F%6E%74%61%63%74%3C%2F%61%3E%0A%20%20%20%20%3C%2F%6E%61%76%3E%0A%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%61%62%6F%75%74%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%68%33%3E%54%65%6E%74%61%6E%67%20%41%72%6F%6F%3C%2F%68%33%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%70%3E%48%61%6C%6F%20%6E%61%6D%61%20%67%77%20%41%72%6F%6F%2E%3C%62%72%3E%55%6D%75%72%20%67%77%20%31%34%3C%62%72%3E%48%6F%62%69%20%67%77%20%6E%67%6F%64%69%6E%67%3C%62%72%3E%41%6E%69%6D%65%20%66%61%76%20%67%77%20%6F%6E%65%20%70%69%65%63%65%3C%62%72%3E%57%61%69%66%75%20%67%77%20%65%6C%61%69%6E%61%2C%20%6D%61%68%69%72%75%2C%20%79%61%6D%61%64%61%2C%20%73%68%69%6E%6F%62%75%2C%20%6D%69%74%73%75%72%69%20%3A%76%3C%2F%70%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%3C%66%6F%6F%74%65%72%3E%0A%20%20%20%20%20%20%3C%62%3E%44%65%76%65%6C%6F%70%65%64%20%62%79%20%3C%61%20%73%74%79%6C%65%3D%22%63%6F%6C%6F%72%3A%20%23%31%38%37%37%46%32%3B%22%20%68%72%65%66%3D%22%69%6E%64%65%78%2E%68%74%6D%6C%22%3E%41%72%6F%6F%3C%2F%61%3E%3C%2F%62%3E%0A%20%20%20%20%3C%2F%66%6F%6F%74%65%72%3E%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'));
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://a.top4top.io/p_3097lgtbw0.jpg">
+    <link rel="shortcut icon" href="https://a.top4top.io/p_3097lgtbw0.jpg" type="image/x-icon" />
+    <title>Aroo-About</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            background-color: #f9f7f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #50394c;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        a {
+          text-decoration: none;
+        }
+        .Aroo {
+          color: #fff;
+          text-decoration: none;
+        }
+        .profile {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .profile img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+        }
+        nav {
+            background-color: #735f6d;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .about {
+            margin-bottom: 20px;
+            padding-bottom: 20px;
+        }
+        .about h3 {
+            color: #50394c;
+        }
+        .about p {
+            color: #666;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #50394c;
+            color: #999;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="profile">
+            <img src="https://a.top4top.io/p_3097lgtbw0.jpg" alt="Foto Profil">
+            <a class="Aroo" href="about.html"><h1>Aroo-About</h1></a>
+        </div>
+    </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <div class="container">
+        <div class="about">
+            <h3>Tentang Aroo</h3>
+            <p>Halo nama gw Aroo.<br>Umur gw 14<br>Hobi gw ngoding<br>Anime fav gw one piece<br>Waifu gw elaina, mahiru, yamada, shinobu, mitsuri :v</p>
+        </div>
+    </div>
+    <footer>
+      <b>Developed by <a style="color: #1877F2;" href="index.html">Aroo</a></b>
+    </footer>
+</body>
+</html>
