--- a/about.html
+++ b/about.html
@@ -71,15 +71,7 @@
         .about p {
             color: #666;
         }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #50394c;
-            color: #999;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
+        
     </style>
 </head>
 <body>
@@ -93,6 +85,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+         <a href="aroo_bot.html">ArooAI</a>
     </nav>
     <div class="container">
         <div class="about">
@@ -100,8 +93,5 @@
             <p>Halo nama gw Aroo.<br>Umur gw 14<br>Hobi gw ngoding<br>Anime fav gw one piece<br>Waifu gw elaina, mahiru, yamada, shinobu, mitsuri :v</p>
         </div>
     </div>
-    <footer>
-      <b>Developed by <a style="color: #1877F2;" href="index.html">Aroo</a></b>
-    </footer>
 </body>
 </html>
