--- a/contact.html
+++ b/contact.html
@@ -10,18 +10,18 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
-            background-color: #f9f7f4; /* Warna latar belakang */
+            background-color: #f9f7f4;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #50394c; /* Warna header */
+            background-color: #50394c;
             color: #fff;
             text-align: center;
-            padding: 20px 0; /* Menambahkan padding untuk header */
+            padding: 20px 0;
             display: flex;
             align-items: center;
-            justify-content: center; /* Menempatkan konten di tengah secara horizontal */
+            justify-content: center;
         }
         a {
             text-decoration: none;
@@ -32,16 +32,16 @@
         }
         .profile {
             display: flex;
-            align-items: center; /* Vertikal tengah */
-            gap: 10px; /* Jarak antara foto profil dan judul */
+            align-items: center;
+            gap: 10px;
         }
         .profile img {
-            width: 50px; /* Sesuaikan ukuran foto profil */
+            width: 50px;
             height: 50px;
-            border-radius: 50%; /* Agar foto profil bundar */
+            border-radius: 50%;
         }
         nav {
-            background-color: #735f6d; /* Warna navigasi */
+            background-color: #735f6d;
             padding: 10px;
             text-align: center;
         }
@@ -67,7 +67,7 @@
             gap: 15px;
         }
         .contact-form label {
-            color: #50394c; /* Warna label */
+            color: #50394c;
         }
         .contact-form input, .contact-form textarea {
             padding: 10px;
@@ -75,27 +75,17 @@
             border-radius: 5px;
             font-size: 16px;
         }
-       .contact-form button {
-    background-color: #50394c; /* Warna tombol sesuai dengan warna header */
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-.contact-form button:hover {
-    background-color: #735f6d; /* Warna tombol saat hover */
-}
-        footer {
-            text-align: center;
+        .contact-form button {
+            background-color: #50394c;
+            color: #fff;
             padding: 10px;
-            background-color: #50394c; /* Warna footer */
-            color: #999;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .contact-form button:hover {
+            background-color: #735f6d;
         }
     </style>
 </head>
@@ -110,6 +100,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+         <a href="aroo_bot.html">ArooAI</a>
     </nav>
     <div class="container">
         <div class="contact-form">
@@ -122,14 +113,11 @@
             <button onclick="sendMessage()">Kirim Pesan</button>
         </div>
     </div>
-    <footer>
-        <b>Developed by <a style="color: #1877F2;" href="index.html">Aroo</a></b>
-    </footer>
     <script>
         function sendMessage() {
             var name = document.getElementById('name').value;
             var message = document.getElementById('message').value;
-            var phoneNumber = '6283182725011'; // Ganti dengan nomor WhatsApp Anda
+            var phoneNumber = '6283182725011';
 
             if (name.trim() === '' || message.trim() === '') {
                 alert('Nama dan Pesan Harus Diisi Su😹');
