--- a/e.html
+++ b/e.html
@@ -53,14 +53,19 @@
             font-size: 1.5em;
             margin-right: 5px;
         }
+        .icon {
+            margin-right: 5px;
+            width: 24px; /* Ukuran ikon */
+            height: 24px; /* Ukuran ikon */
+        }
     </style>
 </head>
 <body>
-    <img src="https://cdn-icons-png.flaticon.com/512/564/564619.png" alt="Error Icon" class="error-icon">
+    <img src="error-icon.png" alt="Error Icon" class="error-icon">
     <h1>404 Not Found</h1>
     <p>Oops! This page doesn't exist.</p>
     <a href="index.html">
-        <span class="material-icons">keyboard_arrow_left</span>
+        <img src="keyboard_arrow_left.png" alt="Back Icon" class="icon">
         Back to Home
     </a>
 </body>
